<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--
    Facebook app ID - must be defined in strings under this particular name!
    -->
    <string name="facebook_app_id">534844050003392</string>

    <string name="app_name">IDoCare</string>
    <string name="img_login_accessibility">IDoCare logo</string>
    <string name="img_request_thumbnail_accessibility">Request thumbnail picture</string>
    <string name="img_user_picture_accessibility">User picture</string>
    <string name="btn_vote_up_accessibility">Vote up</string>
    <string name="btn_vote_down_accessibility">Vote down</string>
    <string name="home_fragment_title">Requests list</string>
    <string name="requests_my_fragment_title">Assigned to me</string>
    <string name="new_request_fragment_title">New request</string>
    <string name="close_request_fragment_title">Close request</string>
    <string name="request_details_fragment_title">Request details</string>

    <!--
    Static texts
    -->
    <string name="txt_new_request_title">NEW REQUEST</string>
    <string name="txt_picked_up_request_title">IN PROGRESS</string>
    <string name="txt_closed_request_title">DONE</string>
    <string name="txt_created_by_title">CREATED BY:</string>
    <string name="txt_picked_up_by_title">ASSIGNED TO:</string>
    <string name="txt_closed_by_title">CLEANED BY:</string>
    <string name="txt_location_title">Location:</string>
    <string name="txt_add_user_photo">Upload Photo</string>
    <string name="txt_change_user_photo">Change photo</string>
    <string name="txt_no_account_question">Don\'t have an account yet?</string>
    <string name="txt_sign_up_link">" Sign up."</string>
    <string name="txt_has_account_question">Already have an account?</string>
    <string name="txt_log_in_link">" Login."</string>


    <!--
    Notifications
    -->
    <string name="notification_gps_permission_request_title">IDoCare requires "location" permission</string>
    <string name="notification_gps_permission_request_body">Tap this notification and allow IDoCare access
        to location data in order to expose its full functionality</string>




    <!--
    Screen titles
    -->
    <string name="title_login_native">Login</string>
    <string name="title_signup_native">Create account</string>



    <!--
    Buttons' captions
    -->

    <string name="btn_dialog_positive">Yes</string>
    <string name="btn_dialog_negative">No</string>
    <string name="btn_dialog_close">Close</string>

    <string name="btn_skip_login">Skip</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_login">Log in</string>
    <string name="btn_login_facebook">Continue with Facebook</string>
    <string name="btn_create_new_request">Create new request</string>
    <string name="btn_pickup_request">Assign to me</string>
    <string name="btn_switch_to_close_request_fragment">Complete request</string>
    <string name="btn_close_request">I DID IT!</string>
    <string name="btn_add_picture">Add a picture</string>


    <!--
    Hints for EditText's
    -->
    <string name="hint_leave_comment">Leave a comment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>


    <!--
    Messages shown to the user
    -->

    <string name="dialog_title_login_required">Login required</string>

    <string name="msg_ask_to_log_in_before_new_request">In order to create new requests you need
        to be logged in. Would you like to log in now?</string>

    <string name="msg_ask_to_log_in_before_pickup">In order to assign requests to yourself you need
        to be logged in. Would you like to log in now?</string>

    <string name="msg_ask_to_log_in_before_vote">In order to vote for reputation you need
        to be logged in. Would you like to log in now?</string>

    <string name="msg_illegal_email">provide valid email address</string>
    <string name="msg_password_must_not_contain_spaces">password must not contain spaces</string>
    <string name="msg_password_must_not_be_short">password must be at least 6 chars long</string>
    <string name="msg_repeat_password_must_match">repeated password does not match the original</string>
    <string name="msg_first_name_is_required">first name is required</string>
    <string name="msg_last_name_is_required">last name is required</string>
    <string name="msg_resolve_errors">Please resolve these errors:</string>


    <string name="msg_insufficient_location_accuracy">Insufficient location accuracy</string>

    <string name="msg_pictures_required">Please take at least one picture</string>

    <string name="msg_too_far_from_original_location">You are too far from the original location</string>



    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- User picture chooser dialog -->
    <string name="user_picture_chooser_dialog_message">Would you like to upload a picture from gallery,
        or take a new one with device\'s camera?</string>
    <string name="user_picture_chooser_dialog_button_caption_from_gallery">From gallery</string>
    <string name="user_picture_chooser_dialog_button_caption_new">New</string>

    <!-- Facebook login email required dialog -->
    <string name="fb_login_email_required_dialog_title">Email permission not granted</string>
    <string name="fb_login_email_required_dialog_message">IDoCare requires your email address for authentication. Please remove IDoCare from your Facebook apps list and try again.</string>


</resources>
