<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_fragment_padding"
    android:gravity="bottom|center_horizontal"
    android:background="@drawable/default_fragment_background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_large"
        android:contentDescription="@string/img_logo_accessibility"
        android:layout_marginBottom="30dp"/>


    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_choose_facebook_login"
        android:layout_width="@dimen/wide_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">


        <Button
            android:id="@+id/btn_choose_sign_up_native"
            android:layout_width="@dimen/narrow_button_width"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_up"
            android:textColor="@android:color/white"/>

        <Space
            android:layout_width="@dimen/two_narrow_buttons_horizontal_spacing"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_choose_log_in_native"
            android:layout_width="@dimen/narrow_button_width"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:textColor="@android:color/white"/>

    </LinearLayout>


    <Button
        android:id="@+id/btn_choose_skip_login"
        android:layout_width="@dimen/wide_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_skip_login"
        android:textColor="@android:color/white"/>


</LinearLayout>