<?xml version="1.0" encoding="utf-8"?>


<il.co.idocare.widgets.VerticalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="@dimen/fragment_default_padding">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Include colorized status bar-->
        <include layout="@layout/element_request_status_bar_linear"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_tiny_padding" />

        <TextView
            android:id="@+id/txt_created_by_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Placeholder for "created by" MVC view-->
            <FrameLayout
                android:id="@+id/frame_created_by_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <include
                layout="@layout/element_vote_panel"
                android:id="@+id/element_created_vote_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_title"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/txt_created_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/fragment_default_padding"
            android:layout_marginEnd="@dimen/fragment_default_padding"
            android:layout_marginTop="@dimen/fragment_tiny_padding"
            android:maxLines="1"
            android:ellipsize="end"/>


        <!-- Include "created" pictures -->
        <include  android:id="@+id/element_created_pictures"
            layout="@layout/element_pictures_row_linear"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_default_padding" />


        <TextView
            android:id="@+id/txt_closed_by_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!-- Placeholder for "created by" MVC view-->
            <FrameLayout
                android:id="@+id/frame_closed_by_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <include
                layout="@layout/element_vote_panel"
                android:id="@+id/element_closed_vote_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_title"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/txt_closed_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/fragment_default_padding"
            android:layout_marginEnd="@dimen/fragment_default_padding"
            android:layout_marginTop="@dimen/fragment_tiny_padding"
            android:maxLines="1"
            android:ellipsize="end"/>

        <!-- Include "closed" pictures -->
        <include  android:id="@+id/element_closed_pictures"
            layout="@layout/element_pictures_row_linear"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="@dimen/fragment_default_padding"
            android:paddingStart="@dimen/fragment_default_padding"
            android:paddingRight="@dimen/fragment_default_padding"
            android:paddingEnd="@dimen/fragment_default_padding"
            android:text="@string/txt_location_title"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_request_fine_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/fragment_default_padding"
            android:paddingStart="@dimen/fragment_default_padding"
            android:paddingRight="@dimen/fragment_default_padding"
            android:paddingEnd="@dimen/fragment_default_padding"
            android:text="TODO Location"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_small_padding" />



        <com.google.android.gms.maps.MapView
            xmlns:map="http://schemas.android.com/apk/res-auto"
            android:id="@+id/map_preview"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/map_preview_height"
            android:layout_marginLeft="@dimen/fragment_default_padding"
            android:layout_marginStart="@dimen/fragment_default_padding"
            android:layout_marginRight="@dimen/fragment_default_padding"
            android:layout_marginEnd="@dimen/fragment_default_padding"
            android:layout_marginBottom="@dimen/fragment_large_padding"
            map:liteMode="true"
            map:cameraZoom="@integer/map_preview_lite_default_zoom"/>

        <Button
            android:id="@+id/btn_pickup_request"
            android:layout_width="@dimen/wide_button_width"
            android:layout_height="@dimen/wide_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_large_padding"
            android:layout_marginBottom="@dimen/fragment_large_padding"
            android:background="@color/picked_up_request_color"
            android:text="@string/btn_pickup_request"
            style="@style/BoldTextStyleForButton"/>


        <Button
            android:id="@+id/btn_close_request"
            android:layout_width="@dimen/wide_button_width"
            android:layout_height="@dimen/wide_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_large_padding"
            android:layout_marginBottom="@dimen/fragment_large_padding"
            android:background="@color/closed_request_color"
            android:text="@string/btn_switch_to_close_request_fragment"
            style="@style/BoldTextStyleForButton"/>

    </LinearLayout>

</il.co.idocare.widgets.VerticalScrollView>